`TruffleObject` based JVM Interop over `jvm-channel` (#6)