@@ -20,22 +20,27 @@
     <artifactId>pom</artifactId>
     <version>2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    
+
     <name>Extra GraalVM Native Utilities</name>
     <url>https://github.com/jtulach/graalvm-native-libs</url>
     <description>
     This package contains useful utilities for working with GraalVM native-image ahead-of-time compilation.
     </description>
-    
+
     <modules>
         <module>jvm-channel</module>
+        <module>persist-dsl</module>
+        <module>persist</module>
+        <module>jvm-interop</module>
         <module>examples/jvmlauncher</module>
         <module>examples/jvmchannel</module>
+        <module>examples/jvminterop</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <repoDir>${basedir}</repoDir>
         <moduleName>${project.name}</moduleName>
+        <graalvm.version>25.0.3</graalvm.version>
     </properties>
     <licenses>
         <license>
@@ -71,7 +76,7 @@
             <dependency>
                 <groupId>org.graalvm.sdk</groupId>
                 <artifactId>nativeimage</artifactId>
-                <version>25.0.3</version>
+                <version>${graalvm.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
@@ -107,6 +112,7 @@
                         <target>25</target>
                         <compilerArgs>
                             <arg>-Xlint:deprecation</arg>
+                            <arg>-proc:full</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
@@ -128,6 +134,11 @@
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>3.11.2</version>
                     <configuration>
+                        <additionalOptions>
+                            <additionalOption>
+                                --snippet-path=${basedir}/src/test/java
+                            </additionalOption>
+                        </additionalOptions>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -177,6 +188,7 @@
                         <metadataRepository>
                             <enabled>false</enabled>
                         </metadataRepository>
+                        <skipBaseSBOM>true</skipBaseSBOM>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -197,6 +209,18 @@
                             </goals>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.5.5</version>
+                    <configuration>
+                        <argLine>
+                            -XX:+HeapDumpOnOutOfMemoryError
+                            -XX:HeapDumpPath=${project.build.directory}
+                            -Xmx64M
+                        </argLine>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
